Cambios importantes a la lógica del backen